[package]
name = "beverage"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0"

[[bin]]
name = "installer"
path = "src/installer/main.rs"

[[bin]]
name = "beverage"
path = "src/wrapper/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4"